--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
   },
   "dependencies": {
     "next": "12.0.4",
+    "next-react-svg": "1.1.3",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
     "@types/node": "16.11.9",
     "@types/react": "17.0.36",
+    "@types/styled-components": "^5.1.15",
+    "babel-plugin-styled-components": "^2.0.1",
     "eslint": "7",
     "eslint-config-next": "12.0.4",
     "typescript": "4.5.2"
