--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "moment": "^2.29.1",
     "next": "12.0.4",
     "next-react-svg": "1.1.3",
     "react": "17.0.2",
