--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "formik": "^2.2.9",
+    "framer-motion": "^5.3.3",
     "moment": "^2.29.1",
     "next": "12.0.4",
     "next-react-svg": "1.1.3",
